# AutoPyVerifier

./: README.md  pyproject.toml  requirements.txt
data/toy/: task_description.txt
src/autopyverifier/: __init__.py  cli.py  config.py  data.py  execution.py  metrics.py  models.py  prompts.py  search.py
src/autopyverifier/llm/: __init__.py  base.py  claude_llms.py  gemini_llms.py  mock.py  openai_llms.py
src/data/toy/: devset.jsonl  task_description.txt
